# JDJG-s-Manager-Bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cogs/: jsk.py  listeners.py
