[tool.poetry]
name = "Manager Bot"
version = "0.0.1"
description = "A bot to manage things"
authors = ["jdjg"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.1"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
doc-search = {git = "https://github.com/Tom-the-Bomb/doc-search"}
"discord.py" = {git = "https://github.com/iDevision/enhanced-discord.py", branch = "2.0"}
asyncpg = "^0.24.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
