[tool.poetry]
name = "jdjg-s-manager-bot"
version = "0.1.0"
description = ""
authors = ["JDBot <jdjgbot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
doc-search = {git = "https://github.com/Tom-the-Bomb/doc-search"}
discord-py = {git = "https://github.com/Rapptz/discord.py"}
asyncpg = ">=0.29.0"
psutil = ">=5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
